--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,11 @@ spring.datasource.url=jdbc:h2:file:./target/demodb;MODE=MySQL;AUTO_SERVER=TRUE
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
+
+# HTTP Client using @HttpExchange
+app.custom.base-url=https://jsonplaceholder.typicode.com/
+
+# workaround of Invalid character found in the request target
+# https://stackoverflow.com/questions/75579900
+server.tomcat.relaxed-path-chars=[,]
+server.tomcat.relaxed-query-chars=[,]
