--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -15,11 +15,23 @@ spring.flyway.enabled=true
 spring.sql.init.mode=EMBEDDED
 spring.sql.init.data-locations=classpath:data.sql
 
+# use mode mysql to embedded h2 db in test
+# https://stackoverflow.com/questions/42364935
+# use different database name random.uuid to avoid the flakyness
+# https://stackoverflow.com/questions/34617152
+spring.datasource.url=jdbc:h2:mem:${random.uuid};DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;MODE=MySQL
+
 # Important: Spring Boot will ignore spring.datasource.url
 # and use in-memory embedded DB instead as default in Test
 # https://stackoverflow.com/questions/58526235
 
-# setting for using external database for test
-# spring.test.database.replace=NONE
+# enable spring.datasource.url for test
+spring.test.database.replace=NONE
 # https://nainaistar.hatenablog.com/entry/2021/11/08/120000
 # https://qiita.com/key_sleep/items/7ff4a5ca036ec7adb3a5
+
+# HTTP Client using @HttpExchange
+# app.custom.base-url=https://jsonplaceholder.typicode.com/
+
+# json-server for local test https://github.com/typicode/json-server
+app.custom.base-url=http://localhost:8081/
